github-notifications-rss/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-notifications-rss
  namespace: github-notifications-rss
  labels:
    app.kubernetes.io/name: github-notifications-rss
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: github-notifications-rss
  template:
    metadata:
      labels:
        app.kubernetes.io/name: github-notifications-rss
    spec:
      serviceAccountName: github-notifications-rss
      automountServiceAccountToken: false
      containers:
        - name: github-notifications-rss
          image: skynewz/github-notifications-rss:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: web
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 1
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
