github-notifications-rss/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: github-notifications-rss
  namespace: github-notifications-rss
  labels:
    app.kubernetes.io/name: github-notifications-rss
spec:
  selector:
    app.kubernetes.io/name: github-notifications-rss
  ports:
    - name: web
      port: 8080
